# clapping-figment

./: Cargo.toml  README.md  config.toml  env.sh
migrations/: 20231022140055_create_todo.up.sql
src/: cli.rs  config.rs  db.rs  main.rs  run.rs  setup.rs  todo.rs
